@@ -5,7 +5,7 @@
 while read
 	do
 		eval $REPLY
-	done< <(cat exampleprefs.data|yadqt --type=prefsdialog -t "Example Prefs" -a yadprefsexample --fromstdin --ipseparator=newline --opseparator=newline 2>/dev/null)
+	done< <(cat exampleprefs.data|yadqt --type=prefsdialog -t "Example Prefs" -a yadprefsexample --fromstdin --ipseparator=newline --opseparator=newline --buttons="ok|cancel|apply" 2>/dev/null)
 
 echo prefs_combo_name_1=$prefs_combo_name_1
 echo combo_name_2=$combo_name_2
