@@ -1,4 +1,5 @@
 0.1.1
+Set buttons in prefs dialog via the --buttons switch, defaults to OK.
 Changed buttons in prefs dialog to "Apply, Ok, Cancel" to allow live update of prefs ( see example bashprefslive.sh.
 Added spin buttons to pref dialog.
 Added tabbed prefs dialog.
